app/less/_common.less
/* ... */
.bodycontainer {
  background-color: @color3;
  width: 100%;
  min-height: 100%;
  padding: 0px 5% 5% 5%;
  @media @tablet-screen, @mobile-screen { padding: 0 1px 5% 1px; }
  -webkit-transition: background-color 2s;
  transition: background-color 2s;
  .card-container {
    .card-spacer { height: 50px; width: 100%; background-color: @color3; position: relative; z-index: 10;}
    .header {
      position: relative;
      z-index:10;
      background-color: @color1;
    }
    .page-alert {
      position: fixed;
      bottom: 40%;
      right: 0;
      z-index: 100;
      color: rgba(0,0,0,1);
      @media @mobile-screen { bottom: 25%; }
      .directions-container {
        background-color: rgba(255,255,255,0.7);
        padding: 15px 30px 15px 15px;
        border-top-left-radius: 10px;
        border-bottom-left-radius: 10px;
        visibility: visible;
        //display: block;
        transition: all 1.5s ease;
        -webkit-animation:1.5s fadeInRight ease;
        animation:1.5s fadeInRight ease;
        &.noshow {
          visibility: hidden;
          //display: none;
          width: 0;
          -webkit-animation:1.5s fadeOutRight ease;
          animation:1.5s fadeOutRight ease;
        }
        .directions-content { font-family: 'Delius', cursive; font-size: 1.7rem; text-align: center;}
        .directional-arrows {
          text-align: center;
          padding: 0 20px;
          .scroll-arrow {
            width: 20px;
            height: 20px;
            border-right: 2px solid #000;
            border-bottom: 2px solid #000;
            -ms-transform: rotate(45deg); /* IE 9 */
            -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
            transform: rotate(45deg);
          }
        }
      }
    }
    .card-drawer {
      position: relative;
      //z-index:5;
      -webkit-animation:2.5s slideInDown  ease;
      animation:2.5s slideInDown  ease;
      /* when showing the thing */
      &.ng-hide  {
        -webkit-animation:1.5s slideOutUp ease;
        animation:1.5s slideOutUp ease;
      }
      .card-body {
        background-color: @theme-color-light;
        margin: 0 20px;
        border-radius: 0px 0px 25px 25px;
        padding: 5%;
        position: relative;
        //z-index:5;
        box-shadow: @main-shadow;

        @media @tablet-screen, @mobile-screen { padding-bottom: 30%; }

        &.screenPass { padding-top: 220px;}

        .card-content {
          color: #000;
          -webkit-transition: all 1s;
          transition: all 1s;
          .mainBody {
            .card-page {
              color: rgba(0,0,0,1);
              h1 { text-align: center; margin-bottom: 30px; font-size: 3rem; }
              .home-text {
                text-align: center;
                font-family: 'Delius', cursive;
                font-size: 1.5rem;
                padding: 0px 20%;
                .groom, .bride{ font-weight: bold; color: rgba(255,255,255,1);}

                .home-video {
                  width: 100%;
                  height: 300px;
                  margin: 30px 0;
                  iframe { width: 100%; height: 100%; }
                }
                .img-cover {
                  width: 100%;
                  //height: 200px;
                  overflow: hidden;
                  .home-img { width: 100%;}
                  .feather-img {
                    width: 100%;
                    margin: 1em auto;
                    box-shadow: 80px 80px 113px rgba(247,246,241,1) inset,-80px -80px 110px rgba(247,246,241,1) inset;
                    height: 500px;
                    background-size: cover;
                    background-repeat: no-repeat;
                  }
                }

                @media @tablet-screen, @mobile-screen { padding: 0; }
              }
            }
          }
        }
      }
    }

    .mainBody {
      position: relative;
      //z-index:5;
    }

    .card-theme {
      float: left;
      margin: 20px 0 5px 50px;
      background-color: rgba(255,255,255,0.2);
      border-radius: 10px;

      .theme-icon {
        display: inline-block;
        width: 10px;
        height: 10px;
        margin: 10px;
        border-radius: 25px;
      }
    }
    .cardOpener {
      padding: 10px 0px 5px 0px;
      text-align: center;
      font-size: 5rem;
      color: rgba(255,255,255,1);
      display: block;
      &.ng-hide { display: none;}
      .thin-arrow {
        width: 50px;
        height: 50px;
        display: inline-block;
        transition: all 0.5s ease-in-out;
        border-right: 3px solid @theme-color-orange;
        border-bottom: 3px solid @theme-color-orange;

        &:hover {
          margin: 0px 20px 20px 20px;
          border-right: 3px solid rgba(0,0,0,1);
          border-bottom: 3px solid rgba(0,0,0,1);
        }

        &.down {
          -ms-transform: rotate(45deg); /* IE 9 */
          -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
          transform: rotate(45deg);
        }

        &.up {
          -ms-transform: rotate(-135deg); /* IE 9 */
          -webkit-transform: rotate(-135deg); /* Chrome, Safari, Opera */
          transform: rotate(-135deg);
        }

      }
    }
  }

  /*Scroll Styles*/
  ::-webkit-scrollbar-track   {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  	background-color: rgba(10,10,10,0.7);
  }

  ::-webkit-scrollbar  {
  	width: 10px;
    background-color: rgba(100,100,100,0.7);
  }

  ::-webkit-scrollbar-thumb  {
    background-color: rgba(255,255,255,0.7);
  	border-left: 3px solid rgba(85,85,85,0.5);
    border-right: 3px solid rgba(85,85,85,0.5);
  }
}
/* ... */

